--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="css/titledpagestyle.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script>
 	  $(document).ready(function(){
       $(".main").tiltedpage_scroll({
