--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>GPU text rendering in webkit by Keith Clark </title>
+<title>Курсовой проект </title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/tiltedpage-scroll.css">
 <link rel="stylesheet" type="text/css" href="css/titledpagestyle.css">
