--- a/models/light.html
+++ b/models/light.html
@@ -1033,5 +1033,6 @@ input.rank-100:checked ~ .light-bulb .base .bulb {
 </div>
   
   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </body>
 </html>
