--- a/models/locker.html
+++ b/models/locker.html
@@ -564,5 +564,6 @@ $(".dial").on("touchend",function(){
 });
     </script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </body>
 </html>
