--- a/models/lamp.html
+++ b/models/lamp.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Light switch</title>
+  <title>Интерактивная модель поведения включения и выключения лампочки</title>
   
   
   <link rel='stylesheet prefetch' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
